# ChangeLog for dev-tcltk/tclperl
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/tclperl/ChangeLog,v 1.7 2007/05/01 23:43:09 matsuu Exp $

*tclperl-3.2 (01 May 2007)

  01 May 2007; MATSUU Takuto <matsuu@gentoo.org> +tclperl-3.2.ebuild:
  Version bumped.

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  06 Nov 2004; <pyrania@gentoo.org> tclperl-3.1.ebuild:
  Marked stable on x86.

*tclperl-3.1 (22 Oct 2004)

  22 Oct 2004; MATSUU Takuto <matsuu@gentoo.org> +tclperl-2.5-r1.ebuild,
  +tclperl-3.1.ebuild:
  Fixed compile error. Bug 68281.
  Version bumped.

  17 Oct 2004; David Holm <dholm@gentoo.org> tclperl-2.5.ebuild:
  Added to ~ppc.

*tclperl-2.5 (17 May 2004)

  17 May 2004; <matsuu@gentoo.org> +tclperl-2.5.ebuild:
  Initial import.
